--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ os:
   - linux
   - osx
 
-script: dub build --compiler=${DC}
+script: dub build --compiler=${DC} --arch=x86 && dub build --compiler=${DC} --arch=x86_64
